# ai-study-planner

./: README.md  app.py  planner.py  pyproject.toml
sample_data/: sample_subjects.csv
tests/: test_planner.py
